@@ -360,6 +360,23 @@ CPPFLAGS="$CPPFLAGS $GRAPHIC_CFLAGS"
 AC_CHECK_HEADER(X11/extensions/XShm.h, AC_DEFINE(XSHM))
 CPPFLAGS="$save_CPPFLAGS"
 
+#--------------------------------------------------------------------
+# Window's graphics library
+#--------------------------------------------------------------------
+save_header=${CPPFLAGS}
+save_libs=${LIBS}
+CPPFLAGS="${GRAPHIC_CFLAGS} ${GRAPHIC_LFLAGS} ${CPPFLAGS}"
+LIBS="${GRAPHIC_LIBS} ${LIBS}"
+AC_CHECK_LIB(gdi32, main, have_gdi32=yes, have_gdi32=no)
+if test "$have_gdi32" = yes; then
+  GRAPHIC_LIBS="-lgdi32 ${GRAPHIC_LIBS}"
+fi
+CPPFLAGS="${save_header}"
+LIBS="${save_libs}"
+
+#--------------------------------------------------------------------
+# Set definitions
+#--------------------------------------------------------------------
 WITH_WRASTER=no
 if test $gs_cv_have_wraster = yes -a $set_x_paths = no; then
   AC_DEFINE(WITH_WRASTER)
